# MathModelingWorkbench

./: .gitignore  README.md  WINDOWS_CLIENT.md  build-client.ps1  build-windows-installer.ps1  requirements-desktop.txt  run_auto_b_workflow.py  start-client.bat  start-client.ps1  start-rust-client.bat  start-rust-client.ps1  start-rust-server.bat  start-rust-server.ps1
.github/workflows/: windows-release.yml
app/: __init__.py  config.py  main.py
app/resources/: install_dependencies.ps1  pandoc_reference.docx
app/services/: __init__.py  action_catalog.py  analysis_progress.py  analyzer.py  attachment_profile.py  auto_workflow.py  auto_workflow_jobs.py  backend_skills.py  capacity_autotune.py  capacity_settings.py  code_graph.py  code_solution.py  delivery_batch.py  delivery_batch_jobs.py  delivery_package.py  delivery_readiness.py  diagnostic_refresh.py  docx_export.py  eldercare_solution.py  executor.py  experience_center.py  extractors.py  growth_metrics.py  llm_assistant.py  llm_settings.py  llm_solution.py  llm_stream.py  model_research.py  modeling.py  paper.py  paper_fill.py  parallel_task_plan.py  parsers.py  performance_health.py  process_utils.py  project_readiness.py  repair_campaign.py  repair_center.py  (+8 more)
client/: desktop_client.py
docs/: user_manual.tex
frontend/: next.config.mjs  package-lock.json  package.json
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
tests/: test_api_cache_headers.py  test_executor_dependencies.py  test_llm_settings_redaction.py  test_llm_stream_redaction.py  test_store_artifacts.py  test_trust_center_copy.py
(+485 files in other folders)
